//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table locations {
  id String [pk]
  name String [not null]
  targetStocks target_stocks [not null]
  locationCriterias location_criterias [not null]
  locationCategories location_categories [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table target_stocks {
  id String [pk]
  name String [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  status String [not null]
  Location locations [not null]
  locationId String [not null]
  stockProducts stock_products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table stock_products {
  id String [pk]
  product products [not null]
  productId String [not null]
  targetStock target_stocks [not null]
  targetStockId String [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  imageUrl String [not null]
  catorgory String [not null]
  categoryUrl String [not null]
  brand String [not null]
  name String [not null]
  price Float [not null]
  productUrl String [not null]
  productId Int [not null]
  status String [not null]
  stockProducts stock_products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table criterias {
  id String [pk]
  name String [not null]
  sortId Int [not null]
  locationCriterias location_criterias [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table location_criterias {
  id String [pk]
  location locations [not null]
  locationId String [not null]
  criteria criterias [not null]
  criteriaId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table categories {
  id String [pk]
  name String [not null]
  mainCateg String [not null]
  url String [not null]
  status String [not null]
  locationCategories location_categories [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table location_categories {
  id String [pk]
  location locations [not null]
  locationId String [not null]
  category categories [not null]
  categoryId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: target_stocks.locationId > locations.id

Ref: stock_products.productId > products.id

Ref: stock_products.targetStockId > target_stocks.id

Ref: location_criterias.locationId > locations.id

Ref: location_criterias.criteriaId > criterias.id

Ref: location_categories.locationId > locations.id

Ref: location_categories.categoryId > categories.id